MODDICONV-373 Disallow create/update of a job profile without actions (#60)
* MODDICONV-373 Disallow create/update of a job profile without actions

* re order tests

* fix shouldDeleteAssociationsWithDetailProfilesOnDelete

* fix more test in job profile test

* fix JobProfileTest

* some test fixes

* refactor scripts

* fix merge conflicts and fix job profile tests

* fix some tests and add validations

* logic for validation, fix tests in job and match profiles test

* fix matchprofile tests

* upd news and fix associations tests

* fix assertion

* fix some sonar issues

* remove unused imports

* some fixes

* fix tests