@@ -26,7 +26,6 @@ import org.folio.rest.jaxrs.model.ProfileSnapshotWrapper;
 import org.folio.rest.jaxrs.model.ProfileType;
 import org.folio.rest.jaxrs.model.Qualifier;
 import org.folio.rest.jaxrs.model.Tags;
-import org.folio.rest.jaxrs.model.ProfileType;
 import org.folio.rest.jaxrs.model.ReactToType;
 import org.folio.rest.persist.Criteria.Criterion;
 import org.folio.rest.persist.PostgresClient;
@@ -58,6 +57,7 @@ import static org.folio.rest.jaxrs.model.ActionProfile.FolioRecord.MARC_BIBLIOGR
 import static org.folio.rest.jaxrs.model.MatchDetail.MatchCriterion.EXACTLY_MATCHES;
 import static org.folio.rest.jaxrs.model.MatchExpression.DataValueType.VALUE_FROM_RECORD;
 import static org.folio.rest.jaxrs.model.ProfileType.ACTION_PROFILE;
+import static org.folio.rest.jaxrs.model.ProfileType.JOB_PROFILE;
 import static org.folio.rest.jaxrs.model.ProfileType.MATCH_PROFILE;
 import static org.folio.rest.jaxrs.model.Qualifier.ComparisonPart.NUMERICS_ONLY;
 import static org.hamcrest.Matchers.empty;
@@ -801,19 +801,58 @@ MatchDetail receivedMatchDetail1 = receivedMatchProfile.getMatchDetails().get(0)
         .statusCode(HttpStatus.SC_CREATED).extract().body().as(MappingProfileUpdateDto.class));
       i++;
     }
-
+    i = 0;
+    for (ActionProfileUpdateDto action : actionProfiles) {
+      createdActions.add(RestAssured.given()
+        .spec(spec)
+        .body(new ActionProfileUpdateDto()
+          .withProfile(action.getProfile()
+            .withName(nameForProfiles + i))
+          .withAddedRelations(Lists.newArrayList(new ProfileAssociation()
+              .withMasterProfileId(profilesIds.get(i))
+              .withDetailProfileType(ProfileType.ACTION_PROFILE)
+              .withMasterProfileType(ProfileType.MATCH_PROFILE)
+              .withOrder(0)
+              .withTriggered(false)
+              .withReactTo(ReactToType.MATCH),
+            new ProfileAssociation()
+              .withMasterProfileId(action.getProfile().getId())
+              .withDetailProfileId(createdMappings.get(i).getId())
+              .withDetailProfileType(ProfileType.MAPPING_PROFILE)
+              .withMasterProfileType(ProfileType.ACTION_PROFILE)
+              .withOrder(0)
+              .withTriggered(false))))
+        .when()
+        .post(ACTION_PROFILES_PATH)
+        .then()
+        .statusCode(HttpStatus.SC_CREATED).extract().body().as(ActionProfileUpdateDto.class));
+      i++;
+    }
     i = 0;
     for (JobProfileUpdateDto profile : jobProfiles) {
       created.add(RestAssured.given()
         .spec(spec)
         .body(new JobProfileUpdateDto()
           .withProfile(profile.getProfile().withName(nameForProfiles + i))
-          .withAddedRelations(Collections.singletonList(new ProfileAssociation()
-            .withDetailProfileId(profilesIds.get(i))
-            .withDetailProfileType(ProfileType.MATCH_PROFILE)
-            .withMasterProfileType(ProfileType.JOB_PROFILE)
-            .withOrder(0)
-            .withTriggered(false).withReactTo(ReactToType.MATCH)
+          .withAddedRelations(List.of(
+            new ProfileAssociation()
+              .withDetailProfileId(profilesIds.get(i))
+              .withDetailProfileType(ProfileType.MATCH_PROFILE)
+              .withMasterProfileType(ProfileType.JOB_PROFILE)
+              .withOrder(0)
+              .withTriggered(false).withReactTo(ReactToType.MATCH),
+            new ProfileAssociation()
+              .withDetailProfileId(createdActions.get(i).getId())
+              .withDetailProfileType(ACTION_PROFILE)
+              .withMasterProfileType(MATCH_PROFILE)
+              .withOrder(0)
+              .withTriggered(false),
+            new ProfileAssociation()
+              .withDetailProfileId(createdActions.get(i).getId())
+              .withDetailProfileType(ACTION_PROFILE)
+              .withMasterProfileType(JOB_PROFILE)
+              .withOrder(0)
+              .withTriggered(false)
           )))
         .when()
         .post(JOB_PROFILES_PATH)
@@ -824,12 +863,13 @@ MatchDetail receivedMatchDetail1 = receivedMatchProfile.getMatchDetails().get(0)
     i = 0;
     for (JobProfileUpdateDto profile : created) {
       profile.setDeletedRelations(Collections.singletonList(new ProfileAssociation()
-        .withDetailProfileId(profilesIds.get(i))
+        .withDetailProfileId(createdActions.get(i).getId())
         .withMasterProfileId(profile.getProfile().getId())
-        .withDetailProfileType(ProfileType.MATCH_PROFILE)
-        .withMasterProfileType(ProfileType.JOB_PROFILE)
+        .withDetailProfileType(ACTION_PROFILE)
+        .withMasterProfileType(JOB_PROFILE)
         .withOrder(0)
-        .withTriggered(false).withReactTo(ReactToType.MATCH)));
+        .withTriggered(false).withReactTo(ReactToType.MATCH)
+      ));
       profile.getAddedRelations().clear();
       RestAssured.given()
         .spec(spec)
@@ -857,33 +897,6 @@ MatchDetail receivedMatchDetail1 = receivedMatchProfile.getMatchDetails().get(0)
         .put(JOB_PROFILES_PATH + "/" + profile.getProfile().getId())
         .then()
         .statusCode(HttpStatus.SC_OK);
-      i++;
-    }
-    i = 0;
-    for (ActionProfileUpdateDto action : actionProfiles) {
-      createdActions.add(RestAssured.given()
-        .spec(spec)
-        .body(new ActionProfileUpdateDto()
-          .withProfile(action.getProfile()
-            .withName(nameForProfiles + i))
-          .withAddedRelations(Lists.newArrayList(new ProfileAssociation()
-              .withMasterProfileId(profilesIds.get(i))
-              .withDetailProfileType(ProfileType.ACTION_PROFILE)
-              .withMasterProfileType(ProfileType.MATCH_PROFILE)
-              .withOrder(0)
-              .withTriggered(false)
-              .withReactTo(ReactToType.MATCH),
-            new ProfileAssociation()
-              .withMasterProfileId(action.getProfile().getId())
-              .withDetailProfileId(createdMappings.get(i).getId())
-              .withDetailProfileType(ProfileType.MAPPING_PROFILE)
-              .withMasterProfileType(ProfileType.ACTION_PROFILE)
-              .withOrder(0)
-              .withTriggered(false))))
-        .when()
-        .post(ACTION_PROFILES_PATH)
-        .then()
-        .statusCode(HttpStatus.SC_CREATED).extract().body().as(ActionProfileUpdateDto.class));
       i++;
     }
   }
